Fix spacing and padding

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -42,5 +42,9 @@ footer {
   width: 30%;
   text-align: left;
 }
+.footer-widget p {
+  margin: 5px 0;
+  padding: 2px;
+}
 
 
